--- a/miniprogram/pages/me/runnersSettle/runnersSettle.wxss
+++ b/miniprogram/pages/me/runnersSettle/runnersSettle.wxss
@@ -1,4 +1,3 @@
-/* miniprogram/pages/me/aboutUs/aboutUs.wxss */
 page {
   background-color: #ebecf0;
   letter-spacing: -0.2px;
@@ -18,7 +17,6 @@ page {
   align-items: center;
 }
 
-
 .text {
   text-align: center;
   font-size: 40rpx;
@@ -28,7 +26,7 @@ page {
 
 .text_big {
   text-align: center;
-  font-size:60rpx;
+  font-size: 45rpx;
   color: #babecc;
   text-shadow: 1px 1px 1px #fff;
   padding-top: 30rpx;
@@ -36,7 +34,564 @@ page {
 
 .text_small {
   text-align: left;
-  font-size: 30rpx;
+  font-size: 25rpx;
   color: #babecc;
   text-shadow: 1px 1px 1px #fff;
+}
+
+.text_inform {
+  text-align: left;
+  font-size: 35rpx;
+  color: #222;
+  text-shadow: 1px 1px 1px rgb(226, 226, 226);
+  height: 50rpx;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.input_view {
+  display: block;
+  margin-bottom: calc(16*1.5)px;
+  width: 100%;
+}
+
+.body .html {
+  background-color: #ebecf0;
+}
+
+.body  .p .input .select .textarea .button {
+  letter-spacing: -0.2px;
+  font-size: 16px;
+}
+
+.div .p {
+  color: #babecc;
+  text-shadow: 1px 1px 1px #fff;
+}
+
+.form {
+  padding: 16px;
+  width: 320px;
+  margin: 0 auto;
+}
+
+.segment {
+  padding: 32px 0;
+  text-align: center;
+}
+
+.button .input {
+  border: 0;
+  outline: 0;
+  font-size: 16px;
+  border-radius: 320px;
+  padding: 16px;
+  background-color: #ebecf0;
+  text-shadow: 1px 1px 0 #fff;
+}
+
+.label {
+  /* display: block; *//* margin-bottom: 24px; */
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.input_text {
+  text-align: center;
+  font-size: 40rpx;
+  color: #808080;
+  text-shadow: 1px 1px 1px #fff;
+  /* font-family:"微软雅黑"; */
+}
+
+.input_text_small {
+  text-align: center;
+  font-size: 35rpx;
+  color: #808080;
+  text-shadow: 1px 1px 1px #fff;
+}
+
+.input {
+  margin-right: 8px;
+  box-shadow: inset 2px 2px 5px #babecc, inset -5px -5px 10px #fff;
+  width: 100%;
+  box-sizing: border-box;
+  transition: all 0.2s ease-in-out;
+  appearance: none;
+  -webkit-appearance: none;
+  height: 80rpx;
+  border-radius: 50rpx;
+}
+
+.input:hover {
+  box-shadow: inset 1px 1px 2px #babecc, inset -1px -1px 2px #fff;
+}
+
+input::-webkit-input-placeholder {
+  color: #999;
+  font-size: 14px;
+  font-family: "微软雅黑";
+}
+
+.shadow {
+  /* box-shadow: -5px -5px 20px #fff, 5px 5px 20px #babecc; */
+  box-shadow: inset 2px 2px 5px #babecc, inset -5px -5px 10px #fff;
+  transition: all 0.2s ease-in-out;
+}
+
+.shadow:hover {
+  box-shadow: inset 1px 1px 2px #babecc, inset -1px -1px 2px #fff;
+}
+
+.button {
+  color: #61677c;
+  font-weight: bold;
+  box-shadow: -5px -5px 20px #fff, 5px 5px 20px #babecc;
+  transition: all 0.2s ease-in-out;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 45rpx;
+  /* letter-spacing:15px; *//* cursor: pointer; */
+  border-radius: 25px;
+}
+
+.button:hover {
+  box-shadow: -2px -2px 5px #fff, 2px 2px 5px #babecc;
+}
+
+.button:active {
+  box-shadow: inset 1px 1px 2px #babecc, inset -1px -1px 2px #fff;
+}
+
+.button .icon {
+  margin-right: 8px;
+}
+
+.button .unit {
+  border-radius: 8px;
+  line-height: 0;
+  width: 48px;
+  height: 48px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 8px;
+  font-size: 19.2px;
+}
+
+.button .unit .icon {
+  margin-right: 0;
+}
+
+.button.red {
+  display: block;
+  width: 100%;
+  color: #ae1100;
+}
+
+.input-group {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.input-group label {
+  margin: 0;
+  flex: 1;
+}
+
+.img {
+  width: 100%;
+  height: 100%;
+}
+
+.easy_show {
+  /* transition: all 0.2s ease-in-out; */
+  text-align: left;
+}
+
+.easy_show_ {
+  /* transition: all 0.2s ease-in-out; */
+  text-align: right;
+}
+
+.show_label {
+  display: flex;
+  flex-direction: row;
+}
+
+.change_to_my_btn {
+  padding: 0;
+  background-color: #ebecf0;
+  margin: 0;
+}
+
+
+/* pages/planmanage/plandetail.wxss */
+
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+  color: transparent;
+}
+
+.user_avatar {
+  height: 150rpx;
+  width: 150rpx;
+  border-radius: 100%;
+}
+
+.user_avatar2 {
+  height: 37rpx;
+  width: 37rpx;
+  border-radius: 100%;
+}
+
+.user {
+  margin-left: 300rpx;
+  margin-right: 300rpx;
+}
+
+.user_nickname {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.join {
+  display: flex;
+  flex-direction: row;
+  width: 700rpx;
+  margin: auto;
+  height: auto;
+  align-items: center;
+}
+
+.join_1 {
+  width: 185rpx;
+  display: flex;
+  justify-content: flex_start;
+  align-items: flex-start;
+  height: fit-content;
+  margin-left: 10rpx;
+}
+
+.join_2 {
+  width: 500rpx;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  height: fit-content;
+}
+
+/* pages/planmanage/planmanage.wxss */
+
+.item_1 {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  margin: auto;
+  /* background: red; */
+  height: 80rpx;
+  align-items: center;
+  justify-content: center;
+}
+
+.item_2 {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  margin: auto;
+  /* background: red; */
+  height: 250rpx;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 1px 3px 10px 3px rgba(207, 207, 207, 0.267);
+}
+
+.item_1_1 {
+  width: 30%;
+  margin-left: 10%;
+}
+
+.item_1_1_1 {
+  width: 100%;
+  display: flex;
+  font-size: 37rpx;
+  align-items: center;
+  justify-content: center;
+  height: 80rpx;
+  font-weight: 600;
+}
+
+.item_1_2 {
+  width: 620rpx;
+}
+
+.join_people {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  width: 700rpx;
+  height: auto;
+  align-items: center;
+  justify-content: center;
+}
+
+.join_people_item {
+  display: flex;
+  /* flex-direction: column; */
+  margin: auto;
+  width: 700rpx;
+  height: fit-content;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: row;
+}
+
+.join_people_item_name {
+  width: 120rpx;
+  height: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.join_people_item_detail {
+  width: 580rpx;
+  height: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.btn1 {
+  width: 350rpx;
+  margin-top: 20rpx;
+  background-color: burlywood;
+  color: white;
+  border-radius: 98rpx;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  bottom: 10rpx;
+  left: 200rpx;
+  right: 200rpx;
+  margin-bottom: 20rpx;
+}
+
+.btn1::after {
+  border-radius: 98rpx;
+  border: 0;
+}
+
+.input {
+  width: 95%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+   appearance: none;
+  -webkit-appearance: none;
+}
+
+
+
+
+
+/* 内容输入框 */
+
+
+
+/* .placeholder {
+  font-size: 30rpx;
+  color: rgb(0, 0, 0);
+} */
+
+.line {
+  height: 1rpx;
+  background: #eee;
+}
+
+/* 输入弹窗 */
+
+.toast-main {
+  padding-top: 2vh;
+  padding-bottom: 2vh;
+  background-color: white;
+  text-align: center;
+  border-radius: 50rpx;
+}
+
+.toast-input {
+  margin-left: 5%;
+  margin-right: 5%;
+  border: 1px solid #ddd;
+  padding-left: 2vh;
+  padding-right: 2vh;
+  padding-top: 1vh;
+  padding-bottom: 1vh;
+  border-radius: 50rpx;
+}
+
+.toast-button {
+  display: flex;
+}
+
+.button1 {
+  width: 50%;
+}
+
+.button2 {
+  width: 50%;
+}
+
+.button1 button {
+  width: 100%;
+  background-color: white;
+  color: red;
+  border-radius: 0px;
+  border-bottom-left-radius: 16rpx;
+}
+
+.button2 button {
+  width: 100%;
+  background-color: white;
+  color: black;
+  border-radius: 0px;
+  border-bottom-right-radius: 16rpx;
+}
+
+.text {
+  text-align: center;
+  font-size: 40rpx;
+  color: #babecc;
+  text-shadow: 1px 1px 1px #fff;
+}
+
+.picker{
+  margin-right: 10%;
+  /* box-shadow: inset 2px 2px 5px #babecc, inset -5px -5px 10px #fff; */
+  width: 50%;
+  box-sizing: border-box;
+  /* transition: all 0.2s ease-in-out; */
+  appearance: none;
+  -webkit-appearance: none;
+  height: 80rpx;
+  /* border-radius: 50rpx; */
+  display: flex;
+  align-items: center;
+}
+
+
+
+.input {
+  margin-right: 10%;
+  box-shadow: inset 2px 2px 5px #babecc, inset -5px -5px 10px #fff;
+  width: 50%;
+  box-sizing: border-box;
+  transition: all 0.2s ease-in-out;
+  appearance: none;
+  -webkit-appearance: none;
+  height: 80rpx;
+  border-radius: 50rpx;
+}
+
+.input:hover {
+  box-shadow: inset 1px 1px 2px #babecc, inset -1px -1px 2px #fff;
+}
+
+/* input::-webkit-input-placeholder {
+  color: #999;
+  font-size: 14px;
+  font-family: "微软雅黑";
+} */
+.row_line {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.column_line {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.input_text_small {
+  text-align: center;
+  font-size: 35rpx;
+  color: #808080;
+  text-shadow: 1px 1px 1px #fff;
+}
+
+.picker_text_small {
+  text-align: center;
+  font-size: 35rpx;
+  color: #808080;
+  text-shadow: 1px 1px 1px #fff;
+}
+
+
+.textarea_input {
+  margin-right: 5%;
+  margin-left: 5%;
+  box-shadow: inset 2px 2px 5px #babecc, inset -5px -5px 10px #fff;
+  width: 90%;
+  box-sizing: border-box;
+  transition: all 0.2s ease-in-out;
+  appearance: none;
+  -webkit-appearance: none;
+  height: 310rpx;
+  border-radius: 50rpx;
+
+}
+
+.textarea_input:hover {
+  box-shadow: inset 1px 1px 2px #babecc, inset -1px -1px 2px #fff;
+}
+
+/* textarea_input::-webkit-input-placeholder {
+  color: #999;
+  font-size: 14px;
+  font-family: "微软雅黑";
+} */
+
+
+.change_to_my_btn {
+  padding: 0;
+  background-color: #ebecf0;
+  margin: 0;
+}
+
+
+.button {
+  color: #61677c;
+  font-weight: bold;
+  box-shadow: -5px -5px 20px #fff, 5px 5px 20px #babecc;
+  transition: all 0.2s ease-in-out;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 45rpx;
+  /* letter-spacing:15px; *//* cursor: pointer; */
+  border-radius: 25px;
+  margin-bottom: 20rpx;
+}
+
+.button:hover {
+  box-shadow: -2px -2px 5px #fff, 2px 2px 5px #babecc;
+}
+
+.button:active {
+  box-shadow: inset 1px 1px 2px #babecc, inset -1px -1px 2px #fff;
 }
