--- a/miniprogram/pages/me/me.wxml
+++ b/miniprogram/pages/me/me.wxml
@@ -115,7 +115,7 @@
     <image class="view_1_2_img " src="/images/me/7.png" mode="aspectFit"></image>
   </view>
   
-  <view class="view_1_1" bindtap="aboutUs">
+  <view class="view_1_1" bindtap="teamManager">
     <image class="view_1_1_img" src="/images/me/manager.png" mode="aspectFit"></image>
     <view class="view_1_1_text">团队管理</view>
     <image class="view_1_2_img " src="/images/me/7.png" mode="aspectFit"></image>
