--- a/miniprogram/pages/me/group/group.wxss
+++ b/miniprogram/pages/me/group/group.wxss
@@ -2,6 +2,22 @@ page {
   background-color: #ebecf0;
   letter-spacing: -0.2px;
 }
+::-webkit-scrollbar {
+display: none;
+}
+
+.text_small_inform {
+  display: flex;
+  margin-right: 30rpx;
+  font-size: 20rpx;
+  color: #babecc;
+  text-shadow: 1px 1px 1px #fff;
+  width: 100%;
+  height: 30rpx;
+  justify-content: flex-end;
+
+
+}
 
 .row_line {
   display: flex;
@@ -32,43 +48,19 @@ page {
   padding-top: 30rpx;
 }
 
+.text_name {
+  text-align: start;
+  font-size: 40rpx;
+  color: #babecc;
+  text-shadow: 1px 1px 1px #fff;
+}
+
 .text_small {
-  text-align: left;
+  text-align: center;
   font-size: 30rpx;
   color: #babecc;
   text-shadow: 1px 1px 1px #fff;
 }
-
-.text_small_inform {
-  text-align: center;
-  font-size: 20rpx;
-  color: #babecc;
-  text-shadow: 1px 1px 1px #fff;
-  width: 100%;
-  height: 30rpx;
-  
-  /* animation: fadeIn ;
-  animation-duration:10s; */
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-.fadeIn {
-  animation-name: fadeIn;
-}
-
-
-
-
-
 
 .input_view {
   display: block;
@@ -118,10 +110,17 @@ page {
 
 .input_text {
   text-align: center;
-  font-size: 35rpx;
+  font-size: 40rpx;
   color: #808080;
   text-shadow: 1px 1px 1px #fff;
   /* font-family:"微软雅黑"; */
+}
+
+.input_area_text {
+  text-align: center;
+  font-size: 35rpx;
+  color: #808080;
+  /* text-shadow: 1px 1px 1px #fff; */
 }
 
 .input_text_small {
@@ -131,8 +130,24 @@ page {
   text-shadow: 1px 1px 1px #fff;
 }
 
-.input {
+.input_area {
   margin-right: 8px;
+  box-shadow: inset 2px 2px 5px #babecc, inset -5px -5px 10px #fff;
+  width: 100%;
+  box-sizing: border-box;
+  transition: all 0.2s ease-in-out;
+  height: 80rpx;
+  border-radius: 50rpx;
+  padding-left: 5rpx;
+  padding-right: 5rpx;
+}
+
+.input_area:hover {
+  box-shadow: inset 1px 1px 2px #babecc, inset -1px -1px 2px #fff;
+}
+
+.input {
+  margin-right: 20px;
   box-shadow: inset 2px 2px 5px #babecc, inset -5px -5px 10px #fff;
   width: 100%;
   box-sizing: border-box;
@@ -141,22 +156,20 @@ page {
   -webkit-appearance: none;
   height: 80rpx;
   border-radius: 50rpx;
-  padding: 0rpx 20rpx 0rpx 20rpx;
 }
 
 .input:hover {
   box-shadow: inset 1px 1px 2px #babecc, inset -1px -1px 2px #fff;
 }
 
-input::-webkit-input-placeholder {
-  color: #999;
-  font-size: 14px;
-  font-family: "微软雅黑";
-}
-
 .shadow {
   /* box-shadow: -5px -5px 20px #fff, 5px 5px 20px #babecc; */
   box-shadow: inset 2px 2px 5px #babecc, inset -5px -5px 10px #fff;
+}
+
+.img_shadow {
+  border-radius: 25rpx;
+  box-shadow: inset 1px 1px 2px #babecc, inset -1px -1px 2px #fff;
 }
 
 .button {
@@ -224,75 +237,14 @@ input::-webkit-input-placeholder {
 }
 
 
-.picker{
-  /* margin-right: 10%; */
-  /* box-shadow: inset 2px 2px 5px #babecc, inset -5px -5px 10px #fff; */
-  width: 70%;
+.ql-container {
   box-sizing: border-box;
-  /* transition: all 0.2s ease-in-out; */
-  appearance: none;
-  -webkit-appearance: none;
-  height: 80rpx;
-  /* border-radius: 50rpx; */
-  display: flex;
-  align-items: center;
-}
-
-
-.picker_text_small {
-  text-align: center;
-  font-size: 35rpx;
-  color: #808080;
-  text-shadow: 1px 1px 1px #fff;
-}
-
-
-.picker_item{
-
-}
-
-
-
-.iamgeRootAll {
-  /* margin: auto; */
-  /* margin-top: 0rpx;
-  margin-bottom: 0rpx; */
-  margin-left: 10rpx;
-  margin-right: 10rpx;
-  display: flex;
-  display: -webkit-flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.imgItem {
-  margin: 6rpx;
-  position: relative;
-  width: 230rpx;
-  height: 230rpx;
-  /* background: gainsboro; */
-  border-radius: 15rpx;
-  box-shadow: inset 2px 2px 5px #babecc, inset -5px -5px 10px #fff;
-}
-
-.img {
   width: 100%;
   height: 100%;
+  font-size: 16px;
+  line-height: 1.5;
+  overflow: auto;
+  padding: 10px 10px 20px 10px;
+  border: 1px solid #ECECEC;
+  background: red;
 }
-
-.closeImg {
-  position: absolute;
-  right: -5px;
-  width: 32rpx;
-  height: 32rpx;
-  top: -5rpx;
-}
-
-.photo {
-  width: 50%;
-  height: 50%;
-  margin: 25%;
-}
-
