--- a/miniprogram/pages/me/me.wxml
+++ b/miniprogram/pages/me/me.wxml
@@ -5,22 +5,24 @@
 
 
 <view class='userInfo'>
-  <!-- <image class='bgImage' src='../../images/bg_2.png' mode='aspectFill'></image> -->
+
   <view wx:if="{{userInfo}}" class='show_user'>
 
     <view class="info">
       <image class='avatar' src='{{userInfo.avatarUrl}}' mode='aspectFill'></image>
       <view class='name'>{{userInfo.nickName}}</view>
       <view class='state'>认证状态：{{userstate==2?"已认证":"未认证"}} </view>
+      <view class='state'>跑力：{{user_credit?user_credit:0}} </view>
     </view>
 
 
   </view>
   <view wx:if="{{!userInfo}}" class='show_user'>
- <view class="info">
-    <image class='avatar' src='/images/unkonwUser.jpg' mode='aspectFill'></image>
-    <view class='name'>游客</view>
-    <view class='state'>认证状态：未认证</view></view>
+    <view class="info">
+      <image class='avatar' src='/images/unkonwUser.jpg' mode='aspectFill'></image>
+      <view class='name'>游客</view>
+      <view class='state'>认证状态：未认证</view>
+    </view>
   </view>
 </view>
 <view style="height:100rpx;"></view>
@@ -109,7 +111,7 @@
     <image class="view_1_2_img" src="/images/me/7.png" mode="aspectFit"></image>
   </view>
 
-   <view class="view_1_1" bindtap="runnersSettle">
+  <view class="view_1_1" bindtap="runnersSettle">
     <image class="view_1_1_img" src="/images/me/settle.png" mode="aspectFit"></image>
     <view class="view_1_1_text">我的跑团</view>
     <image class="view_1_2_img" src="/images/me/7.png" mode="aspectFit"></image>
@@ -120,7 +122,14 @@
     <view class="view_1_1_text">关于我们</view>
     <image class="view_1_2_img " src="/images/me/7.png" mode="aspectFit"></image>
   </view>
-  
+
+  <view class="view_1_1" bindtap="settleGroup">
+    <image class="view_1_1_img" src="/images/me/join.svg" mode="aspectFit"></image>
+    <view class="view_1_1_text">跑团入驻</view>
+    <image class="view_1_2_img " src="/images/me/7.png" mode="aspectFit"></image>
+  </view>
+
+
   <view class="view_1_1" bindtap="getManager">
     <image class="view_1_1_img" src="/images/me/manager.png" mode="aspectFit"></image>
     <view class="view_1_1_text">团队管理</view>
@@ -142,26 +151,26 @@
 
 
 <block wx:if="{{isShowConfirm}}">
-<!-- <block > -->
-      <view class='toast-box'>
-        <view class='toastbg'></view>
-        <view class='showToast'>
-            <view class='toast-title'>
-                <text>管理员密钥</text>
-            </view>
-            <view class='toast-main'>
-                <view class='toast-input'>
-                    <input type='password' placeholder='输入密钥' bindinput='setValue'> </input>
-                </view>
-            </view>
-            <view class='toast-button' style="width: 100%;">
-                <view class='button552'>
-                    <button style="width: auto;margin: 20rpx 20rpx 20rpx 20rpx;background: #ebecf0;" catchtap='cancel' class="button">取消</button>
-                </view>
-                <view class='button551'>
-                    <button  style="width: auto;margin: 20rpx 20rpx 20rpx 20rpx;background: #ebecf0;"  catchtap='confirmAcceptance'  class="button">确定</button>
-                </view>
-            </view>
+  <!-- <block > -->
+  <view class='toast-box'>
+    <view class='toastbg'></view>
+    <view class='showToast'>
+      <view class='toast-title'>
+        <text>管理员密钥</text>
+      </view>
+      <view class='toast-main'>
+        <view class='toast-input'>
+          <input type='password' placeholder='输入密钥' bindinput='setValue'> </input>
         </view>
+      </view>
+      <view class='toast-button' style="width: 100%;">
+        <view class='button552'>
+          <button style="width: auto;margin: 20rpx 20rpx 20rpx 20rpx;background: #ebecf0;" catchtap='cancel' class="button">取消</button>
+        </view>
+        <view class='button551'>
+          <button style="width: auto;margin: 20rpx 20rpx 20rpx 20rpx;background: #ebecf0;" catchtap='confirmAcceptance' class="button">确定</button>
+        </view>
+      </view>
     </view>
-  </block>
+  </view>
+</block>
