--- a/miniprogram/pages/me/me.wxss
+++ b/miniprogram/pages/me/me.wxss
@@ -21,15 +21,12 @@ page {
 
 .userInfo .info {
   width: 100%;
-  /* height:94%; */
-  /* position: absolute; */
-/* margin: auto; */
+  /* height:94%; *//* position: absolute; *//* margin: auto; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* z-index: 2; */
-  /* background: #ebe this.globalData.userInfo cf0; */
+  /* z-index: 2; *//* background: #ebe this.globalData.userInfo cf0; */
 }
 
 /* .userInfo .info > view {
@@ -210,14 +207,15 @@ font-weight: bolder;
 }
 
 .state {
-  height: 100rpx;
+  height: 30rpx;
   margin-top: 20rpx;
   position: relative;
   top: -100rpx;
   left: 0rpx;
   font-size: 27rpx;
   color: black;
-  /* font-weight: bolder; */
+  width: 300rpx;
+  margin-left: 20%;
 }
 
 .show_user {
@@ -231,94 +229,87 @@ font-weight: bolder;
   transition: all 0.2s ease-in-out;
 }
 
-
 .toast-box {
-    width: 100%;
-    height: 100%;
-    opacity: 1;
-    position: fixed;
-    top: 0px;
-    left: 0px;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  position: fixed;
+  top: 0px;
+  left: 0px;
 }
- 
- 
+
 .toastbg {
-    opacity: 0.2;
-    background-color: black;
-    position: absolute;
-    width: 100%;
-    min-height: 100vh;
+  opacity: 0.2;
+  background-color: black;
+  position: absolute;
+  width: 100%;
+  min-height: 100vh;
 }
- 
+
 .showToast {
-    position: absolute;
-    opacity: 1;
-    width: 70%;
-    margin-left: 15%;
-    margin-top: 50%;
-    /* background-color: #ebecf0; */
+  position: absolute;
+  opacity: 1;
+  width: 70%;
+  margin-left: 15%;
+  margin-top: 50%;
+  /* background-color: #ebecf0; */
 }
- 
+
 .toast-title {
-    padding-left: 5%;
-    background-color: #3c64d0;
-    color: white;
-    padding-top: 2vh;
-    padding-bottom: 2vh;
-    border-top-right-radius: 16rpx;
-    border-top-left-radius: 16rpx;
+  padding-left: 5%;
+  background-color: #3c64d0;
+  color: white;
+  padding-top: 2vh;
+  padding-bottom: 2vh;
+  border-top-right-radius: 16rpx;
+  border-top-left-radius: 16rpx;
 }
- 
+
 .toast-main {
-    padding-top: 2vh;
-    padding-bottom: 2vh;
-    background-color: #ebecf0;
-    text-align: center;
+  padding-top: 2vh;
+  padding-bottom: 2vh;
+  background-color: #ebecf0;
+  text-align: center;
 }
- 
+
 .toast-input {
-    margin-left: 5%;
-    margin-right: 5%;
-    border: 1px solid #ddd;
-    padding-left: 2vh;
-    padding-right: 2vh;
-    padding-top: 1vh;
-    padding-bottom: 1vh;
+  margin-left: 5%;
+  margin-right: 5%;
+  border: 1px solid #ddd;
+  padding-left: 2vh;
+  padding-right: 2vh;
+  padding-top: 1vh;
+  padding-bottom: 1vh;
 }
- 
+
 .toast-button {
-    display: flex;
-    flex-direction:row;
-    width: 100%;
-    border-radius:15rpx;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  border-radius: 15rpx;
 }
- 
+
 .button1 {
-    width: 50%;
+  width: 50%;
 }
- 
+
 .button2 {
-    width: 50%;
+  width: 50%;
 }
- 
+
 .button551 {
-    width: 50%;
-    background-color: #ebecf0;
-    /* color: red; */
-    /* border-radius: 0px; */
-      border-bottom-right-radius: 16rpx;
-}
- 
-.button552{
-    width:50%;
-    background-color: #ebecf0;
-    /* color: rgb(177, 133, 133); */
-    /* border-radius: 0px; */
- 
-     border-bottom-left-radius: 16rpx;
-
+  width: 50%;
+  background-color: #ebecf0;
+  /* color: red; *//* border-radius: 0px; */
+  border-bottom-right-radius: 16rpx;
 }
 
+.button552 {
+  width: 50%;
+  background-color: #ebecf0;
+  /* color: rgb(177, 133, 133); *//* border-radius: 0px; */
+  border-bottom-left-radius: 16rpx;
+}
 
 .button {
   color: #61677c;
